# calliper

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: array_searching.rs  echo.rs  fibonacci.rs  regex.rs  shell_commands.rs
src/: benchmark_setup.rs  callgrind.rs  config.rs  error.rs  instance.rs  lib.rs  parser.rs  prelude.rs  request.rs  runner.rs  scenario.rs  utils.rs
src/request/: aarch64.rs  x86_64.rs
