[package]
name = "calliper"
authors = ["Piotr Osiewicz <peterosiewicz@gmail.com>"]
version = "0.1.4"
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/osiewicz/calliper"
homepage = "https://github.com/osiewicz/calliper"

description = "Fine-grained benchmarking made easy."
readme = "README.md"
keywords = ["benchmark", "calliper", "callgrind"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~1.0"
rustversion = "1.0"
backtrace = "0.3"
serde = {version = "1.0", features = ["derive"]}
crabgrind = "0.1.9"

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "array_searching"
harness = false

[[bench]]
name = "regex"
harness = false

[[bench]]
name = "shell_commands"
harness = false

[dev-dependencies]
regex = "1.0"
